# programmator

./: .gitignore  .golangci.yml  .goreleaser.yml  CLAUDE.md  LICENSE  Makefile  README.md  go.mod  go.sum  pyproject.toml
.claude/: settings.local.json
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml  release.yml
cmd/programmator/: main.go  main_test.go
commands/: plan-to-file.md
docs/: README.md  e2e_tests.md  orchestration.md  prompt_templates.md
internal/cli/: ansi.go  ansi_test.go  configcmd.go  helpers.go  helpers_test.go  input.go  input_test.go  plan.go  plan_test.go  review.go  review_test.go  root.go  run.go  run_test.go  runner.go  runner_test.go  start.go  start_test.go  status.go  status_test.go  writer.go  writer_test.go
internal/cmd/: configcmd.go  helpers.go  helpers_test.go  hook.go  logs.go  logs_test.go  plan.go  review.go  review_test.go  root.go  run.go  run_test.go  start.go  start_test.go  status.go  status_test.go
internal/codex/: detect.go  executor.go  executor_test.go  process_group_other.go  process_group_unix.go  process_group_unix_test.go  runner.go
internal/config/: compat.go  compat_test.go  config.go  config_test.go  prompts.go  prompts_test.go
internal/debug/: debug.go
internal/dirs/: dirs.go  dirs_test.go
scripts/: prep-plan-test.sh  prep-review-test.sh  prep-toy-test.sh
src/: __init__.py  cli.py  loop.py  prompt_builder.py  response_parser.py  safety.py  ticket_client.py  tui.py
templates/: ticket.md
tests/: test_response_parser.py  test_safety.py  test_ticket_client.py
(+159 files in other folders)
